@@ -72,7 +72,8 @@ typedef void (*InvokeCustomSlotFn)(void*, const char*, void*, void*);
 typedef bool (*IsSmokeClassFn)(void*);
 typedef void (*AddInt)(void*, int);
 typedef void (*AddIntObject)(void*, int, void*);
-typedef void* (*HashToMap)(void*, int);
+typedef void* (*DictToMap)(void*, int);
+typedef void* (*ConstructDict)(const char* type1, const char* type2);
 
 extern FromIntPtr FreeGCHandle;
 
